--- a/posts/feature_selection/index.qmd
+++ b/posts/feature_selection/index.qmd
@@ -2,7 +2,7 @@
 title: "Feature Selection"
 author: "Daniel Wallace"
 date: "2023-02-26"
-categories: [github]
+categories: [Machine Learning, Feature Selection]
 image: "features.jpg"
 ---
 
