add preprocessing section

--- a/posts/the-beginning/index.qmd
+++ b/posts/the-beginning/index.qmd
@@ -13,31 +13,54 @@ on-boarding, training, and the learning curve that a new employee faces to be ab
 being able to prevent the loss of a seasoned employee holds value to the employer.
 </p>
 <p>
-&emsp; We are going to look at a publicily availble dataset that is popular on Kaggle (https://www.kaggle.com/datasets/pavansubhasht/ibm-hr-analytics-attrition-dataset.) and walk through preprocessing, feature selection, oversampling, and finally classification of the label class. 
+&emsp; We are going to look at a publicily availble dataset that is popular on Kaggle (<a href=https://www.kaggle.com/datasets/pavansubhasht/ibm-hr-analytics-attrition-dataset> Available Here </a>) and walk through preprocessing, feature selection, oversampling, and finally classification of the label class. 
 </p>
 <h3>It is all about the data </h3>
 <p>
+
+There is a little bit of prep that needs to be done before we dig into the data and code. If you would like to follow along, here is a link to the python environment file that I used in this research: <a href="https://github.com/wallacedanielk/fileHosting/blob/main/environment.yml">Here is my environment File.</a>
+
 &emsp; The IBM HR Attrition data set is a fictional dataset created by IBM scientists. This dataset has been used in multiple papers and in various
 notebooks on the Kaggle competition website. The attrition dataset has 1470 rows, with 35 columns . The label in this
 case is yes or no, where yes implies that the employee has left the organization and no implies that they stayed. The
 ’yes’ result is 84% of the data and the ’no’ result is 16%.
 </p>
+
+First we are going to import all required libraries for this analysis:
+![](importImage.png){width=80%}
+
+To load the dataset you can read it in using Pandas, I call my data variable attritionData. Before I get started I split my data into a dataset of features and an array of labels. 
+
+![](dataSplit.png){width=80%}
+
+
 <h3>Time for a little housekeeping</h3>
 
-<ul>
-<li>Labels were encoded using 1 for 'yes' and 0 for 'no' </li>
-<li> Columns 'Over18', 'EmployeeCount', 'Standard Hours' were dropped due to all having the same value for all of the records in the dataset. </li>
-<li>The Column 'EmployeeNumber' was dropped due to it being a unique identifier for each record and offers no value to the model. </li>
-<li>This dataset did not have any missing value, so no techniques for missing data were used. </li>
-<li> All categorical variables were one-hot encoded using the 'dummies' Pandas package in Python. </li>
-<li> The continous features were scaled using standard scalar from Scikit Learn package in Python</li>
-<li> Columns were dropped based on feature importances with a threshold of 0.015</li>
-<li>The dataset was split into training as testing data using a 70/30 split. </li>
-<li> The training data was resampled using borderline SMOTE. The testing data was not resampled to provide a clean test dataset to test the algorithms against. </li>
-</ul>
+
+![Labels are encoded using 1 for 'yes' and 0 for 'no'](encode.png){width=80%} 
+
+![Columns 'Over18', 'EmployeeCount', 'Standard Hours' were dropped due to having the same value for all of the records in the dataset.The Column 'EmployeeNumber' was dropped due to it being a unique identifier for each record and offers no value to the model.](removeColumns.png){width=30%} 
+
+![This dataset did not have any missing value, so no techniques for missing data were used. The above code will verify that.](missing.png){width=80%} 
+ 
+![ All categorical variables were one-hot encoded using the 'dummies' Pandas package in Python.](oneHot.png){width=80%} 
+ 
+ ![The continous features were scaled using standard scalar from Scikit Learn package in Python. I implement this in a method that we will call on the data.](scaleMethod.png){width=80%}
+
+ ![Then you call the method that we created on the data, and get the columns for later use. ](scaleMethodUsed.png){width=80%}
+
+ ![The dataset was split into training as testing data using a 70/30 split. ](dataSplitTestTrain.png){width=80%}
+
+ ![The training data was resampled using borderline SMOTE. ](resample.png){width=80%}
+
+
+
+
+The testing data was not resampled to provide a clean test dataset to test the algorithms against. 
+
 
 <h3>Selecting the right features</h3>
-<p>&emsp; Above I briefly talked about dropping columns and selecting features, here is where we will dive into that in a little more detail.</p>
+<p>&emsp; Columns were dropped based on feature importances with a threshold of 0.015</p>
 
 <h3>Creating new data from old data</h3>
 <p>&emsp; SMOTE </p>
